# everything

./: .gitignore  README.md  flake.nix  justfile  output.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
home/wolf/.zsh/: history
src/: example.py  test.py
src/dopy/: makethething.py
src/dopy/utils/: usages.py
src/everything/: __init__.py  __main__.py  generate.py
src/everything/utils/: scanner.py
temp/: test.py
tests/: test.py
