[project]
name = "dothething"
version = "0.1.1"
description = "from everything import anything"
authors = [{ name = "Wolf Mermelstein", email = "wolfmermelstein@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.35.9",
    "typing-extensions>=4.12.2",
    "click>=8.1.7",
    "black>=24.4.2",
    "pylint>=3.2.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
]

[project.scripts]
everything = "everything.__main__:cli"

[tool.uv]
# optional but recommended if your code lives under src/
src = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

